assets/css/style.css
body {
  font-family: "Raleway", sans-serif;
  font-weight: 400;
  line-height: 2 !important;
  text-align: justify;
}

@font-face {
  font-family: "meninblueregular";
  src: url("../fonts/meninblue-x3m5-webfont.woff2") format("woff2"),
    url("../fonts/meninblue-x3m5-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}
.bg-black {
  background-color: #18222f;
  color: white;
}
.logo {
  font-family: "meninblueregular", monospace;
  letter-spacing: 1rem;
  color: white;
  font-size: 1.8rem;
}
.navbar-toggler {
  font-size: 48px;
}
footer .logo {
  font-size: 12px;
}
a.logo:hover {
  color: white;
}
a,
a:hover,
a:visited,
a:focus {
  text-decoration: none;
  cursor: pointer;
}
.icon {
  height: 30px;
  width: 30px;
  border-radius: 100%;
}
.icon-small {
  height: 25px;
  width: 25px;
  border-radius: 100%;
}
.nav-link {
  color: white !important;
  font-family: "poppins", sans-serif;
  font-size: 16px;
}
.nav-link.active {
  background: #2098d1 !important;
}
.navbar-toggler:focus,
.navbar-toggler:active {
  outline: none;
  box-shadow: none;
}
/* Material icons responsive font sizes */
.material-icons.md-18 {
  font-size: 18px;
}
.material-icons.md-24 {
  font-size: 24px;
}
.material-icons.md-36 {
  font-size: 36px;
  color: white !important;
}
.material-icons.md-48 {
  font-size: 48px;
}
.text-dark {
  color: #18222f !important;
}
.rounded {
  border-radius: 15px !important;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "meninblueregular", "Montserrat", sans-serif;
  font-weight: 400;
  letter-spacing: 0.2rem;
}

/* ----  header  ---- */
header {
  position: relative;
  height: 100vh !important;
}

header i {
  cursor: pointer;
}

#particles_js {
  width: 100%;
  height: 100vh;
  background-image: url("../images/bg-img-1b.webp");
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

#header_nav {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1;
}
#header_text {
  position: absolute;
  top: 35%;
  right: 10%;
  left: 10%;
  color: white;
  font-family: "Montserrat", sans-serif;
  font-size: 3rem !important;
}
#scroll_down_icon {
  position: absolute;
  left: 20%;
  right: 20%;
  bottom: 10%;
  display: flex;
  align-items: center;
  justify-content: center;
}
#scroll_down_icon i {
  cursor: pointer;
  border: 1px solid white;
  border-radius: 50%;
}
#scroll_down_icon i:hover {
  border: none !important;
}

/* roadmap circles */
.circle {
  color: #2098d1;
  border: 1px solid #2098d1;
  border-radius: 100%;
  font-size: 2rem;
  display: flex;
  margin: 0 auto;
  height: 75px;
  width: 75px;
  align-items: center;
  justify-content: center;
}
.circle-hover {
  -webkit-animation-name: hvr-back-pulse;
  animation-name: hvr-back-pulse;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  background-color: #2098d1;
  color: white;
  border: none;
}

/* Cursor */
.typed-cursor {
  color: #2098d1;
  font-weight: bold;
  font-size: 3rem;
  margin-left: 0.2rem;
  display: inline;
  font-family: "Montserrat", sans-serif;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
}
@keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-webkit-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-moz-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.swiper-container {
  width: 100%;
  padding-top: 50px;
  padding-bottom: 50px;
}
.swiper-slide {
  background-image: url("../images/bg-img-1b.webp");
  background-repeat: no-repeat;
  background-size: cover;
  width: 30rem;
  height: auto;
  padding: auto;
  box-shadow: 0 1rem 5rem rgba(0, 0, 0, 0.5) !important;
}
/*  hover cards */
.team_content {
  position: relative;
  margin: auto;
  overflow: hidden;
  height: 200px;
  width: 200px;
  border-radius: 50%;
}
.partners_content {
  position: relative;
  margin: auto;
  overflow: hidden;
  height: auto;
  border-radius: 1rem;
}
.team_content .content_overlay,
.partners_content .content_overlay {
  background: rgba(0, 0, 0, 0.5);
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: all 0.4s ease-in-out 0s;
  -moz-transition: all 0.4s ease-in-out 0s;
  transition: all 0.4s ease-in-out 0s;
}
.partners_content .content_overlay {
  background: #2098d1;
  border-radius: 1rem;
}
.team_content:hover .content_overlay,
.partners_content:hover .content_overlay {
  opacity: 1;
}
.team_content .content_image {
  filter: grayscale(100%);
}
.team_content:hover .content_image {
  filter: initial;
}
.content_image {
  height: auto;
  margin: 0 auto;
}
.content_details {
  position: absolute;
  text-align: center;
  width: 100%;
  top: 50%;
  left: 50%;
  padding: 1rem;
  display: none;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}
.team_content:hover .content_details,
.partners_content:hover .content_details {
  top: 50%;
  left: 50%;
  display: block;
}
.content_details h3 {
  color: #fff;
  font-weight: 500;
  letter-spacing: 0.15em;
  margin-bottom: 0.5em;
}
.content_details p {
  color: #fff;
}
.fadeIn-bottom {
  top: 80%;
}
.fadeIn-top {
  top: 20%;
}
.fadeIn-left {
  left: 20%;
}
.fadeIn-right {
  left: 80%;
}
@media (max-width: 768px) {
  .logo {
    font-size: 1.5rem;
  }
  .navbar-toggler {
    font-size: 36px;
  }
  #header_text {
    font-size: 2.5rem !important;
  }
  .swiper-slide {
    width: 21rem;
    height: auto;
  }
  .team_content {
    height: 250px;
    width: 250px;
  }
  .partners_content {
    height: 300px;
    max-width: 100%;
    margin: 1rem auto;
    border-radius: 1rem;
    box-shadow: 0.25rem 1rem 1.5rem rgba(0, 0, 0, 0.2) !important;
  }
}
@media (min-width: 768px) {
  .tech_img_box {
    margin: 0 auto;
    max-width: 500px !important;
    height: auto;
  }
  .timeline_card {
    width: 250px;
    height: auto;
  }
}

footer p a {
  color: white !important;
}
#date {
  font-size: 18px;
  margin-right: 1rem;
}
.btn-outline-dark {
  color: #18222f;
  border-color: #18222f;
}

.btn-outline-dark:hover {
  color: #fff !important;
  background-color: #18222f;
  border-color: #18222f;
}
.w-20 {
  width: 20%;
}

#timeline h6 {
  font-family: "Montserrat", sans-serif;
}

.list-group-flush > .list-group-item {
  padding: 0.5rem 1rem;
}

